--- a/CapitalismWarrior/app/src/main/res/layout/activity_detail_view.xml
+++ b/CapitalismWarrior/app/src/main/res/layout/activity_detail_view.xml
@@ -283,7 +283,7 @@
                 android:textColor="#000"
                 android:textSize="23sp"/>
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/weapon_comment_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
