--- a/CapitalismWarrior/app/src/main/res/layout/activity_search.xml
+++ b/CapitalismWarrior/app/src/main/res/layout/activity_search.xml
@@ -10,7 +10,7 @@
 
     <include layout="@layout/toolbar_main"/>
 
-    <android.support.v7.widget.SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/search_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
         android:layout_height="1dp"
         android:background="@color/colorGray"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
