--- a/CapitalismWarrior/app/src/main/res/layout/layout_alert_change_quantity.xml
+++ b/CapitalismWarrior/app/src/main/res/layout/layout_alert_change_quantity.xml
@@ -16,7 +16,7 @@
             android:id="@+id/alert_items_holder"
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></LinearLayout>
+            android:layout_height="wrap_content"/>
 
     </ScrollView>
 
